--- a/phpWithMySQL/php/php.ini
+++ b/phpWithMySQL/php/php.ini
@@ -1928,6 +1928,16 @@ ldap.max_links = -1
 ; SSL stream context option.
 ;openssl.capath=
 
+[xdebug]
+xdebug.remote_enable=1
+xdebug.remote_autostart=1
+xdebug.remote_log=/tmp/xdebug.log
+xdebug.mode=develop, debug
+xdebug.start_with_request=yes
+xdebug.client_host=host.docker.internal
+xdebug.discover_client_host=false
+xdebug.client_port=9000
+
 ; Local Variables:
 ; tab-width: 4
 ; End:
