--- a/phpWithMySQL/nginx/default.conf
+++ b/phpWithMySQL/nginx/default.conf
@@ -17,6 +17,7 @@ server {
     location ~ \.php$ {
         fastcgi_pass php:9000;
         fastcgi_index index.php;
+        fastcgi_read_timeout 3600s;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
     }
